--- a/server/public/style.css
+++ b/server/public/style.css
@@ -6,6 +6,10 @@ body {
   font-weight: 300;
 }
 
+h2 {
+  margin: 10px;
+}
+
 a, a:visited {
   color: black;
   text-decoration: none;
@@ -37,7 +41,12 @@ nav a, nav a:visited {
 
 .profile-pic {
   height: 15%;
-  width: 15%;
+  max-width: 15%;
+}
+
+.profile-pic-big {
+  height: auto;
+  width: 7%;
 }
 
 .pref-true {
@@ -46,6 +55,14 @@ nav a, nav a:visited {
 
 .pref-false {
   list-style-type: '𐄂 '
+}
+
+.profile-heading h3, .profile-heading p {
+  margin-bottom: 0;
+}
+
+.profile-heading p {
+  margin-top: 0;
 }
 
 
