--- a/server/public/style.css
+++ b/server/public/style.css
@@ -39,15 +39,24 @@ nav a, nav a:visited {
   padding: 10px;
 }
 
+/* IMAGES */
+
 .profile-pic {
-  height: 15%;
+  max-height: 15%;
   max-width: 15%;
 }
 
+.all-friends {
+  max-height: 8%;
+  max-width: 8%;
+}
+
 .profile-pic-big {
-  height: auto;
+  height: 7%;
   width: 7%;
 }
+
+/* BULLETS */
 
 .pref-true {
   list-style-type: '✓ '
@@ -57,6 +66,11 @@ nav a, nav a:visited {
   list-style-type: '𐄂 '
 }
 
+/* HEADINGS */
+h1 {
+  margin-bottom: 0;
+  margin-left: 16px;
+}
 .profile-heading h3, .profile-heading p {
   margin-bottom: 0;
 }
