fixed zaina's comments

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -43,6 +43,7 @@ select {
   padding: 0.5rem;
   font-family: 'Roboto Mono', monospace;
   border-radius: 16px;
+  cursor: pointer;
 }
 
 /* NAV BAR */
