--- a/server/public/style.css
+++ b/server/public/style.css
@@ -117,6 +117,18 @@ h1 {
   margin-top: 0;
 }
 
+.page-heading {
+  margin-left: 16px;
+}
+
+.page-heading p {
+  margin: 5px 0;
+}
+
+.page-heading h1 {
+  margin-left: 0;
+}
+
 /* MAP */
 .map-container {
   height: 40vh;
