--- a/server/public/style.css
+++ b/server/public/style.css
@@ -19,8 +19,9 @@ a:hover {
 }
 
 .spaced {
-  padding: 0 10px;
+  padding: 8px 10px;
   margin: 0;
+  font-size: 1.2rem;
 }
 
 select {
@@ -67,8 +68,8 @@ nav a, nav a:visited {
 }
 
 .all-friends {
-  max-height: 8%;
-  max-width: 8%;
+  max-height: 5%;
+  max-width: 5%;
 }
 
 .profile-pic-big {
