--- a/server/public/style.css
+++ b/server/public/style.css
@@ -9,13 +9,9 @@ h2 {
   margin: 10px;
 }
 
-a, a:visited {
+a {
   color: black;
   text-decoration: none;
-}
-
-a:hover {
-  color: #EC4E20;
 }
 
 .spaced {
@@ -36,7 +32,7 @@ select {
 }
 
 .plus-button:hover {
-  color: #43AA8B;
+  color: #43aa8b;
 }
 
 .no-padding {
@@ -51,16 +47,9 @@ select {
 
 /* NAV BAR */
 
-nav {
-  background: #254441;
-  margin: 0;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-}
-
-nav a, nav a:visited {
-  color: white;
+nav a,
+nav a:active {
+  color: rgb(255, 255, 255);
   padding: 10px;
 }
 
@@ -84,11 +73,11 @@ nav a, nav a:visited {
 /* BULLETS */
 
 .pref-true {
-  list-style-type: '✓ '
+  list-style-type: '✓ ';
 }
 
 .pref-false {
-  list-style-type: '𐄂 '
+  list-style-type: '𐄂 ';
 }
 
 .no-bullet {
@@ -104,7 +93,8 @@ h1 {
   margin-bottom: 0;
   margin-left: 16px;
 }
-.profile-heading h3, .profile-heading p {
+.profile-heading h3,
+.profile-heading p {
   margin-bottom: 0;
 }
 
@@ -127,25 +117,37 @@ h1 {
 /* MAP */
 .map-container {
   height: 40vh;
-  width: 50vw
+  width: 50vw;
 }
 
 /* CALENDAR */
 
+.calendar {
+  box-sizing: border-box;
+  font-size: 1rem;
+  /* max-width: 600px; */
+}
+
 .calendar .header {
   background-color: #43aa8b;
   text-align: center;
-  min-height: 2rem;
-  line-height: 2rem;
+  min-height: 3rem;
+  line-height: 3rem;
   color: black;
-  font-weight: 700;
+  font-weight: 800;
+  font-size: 1.25rem;
   display: flex;
+}
+
+.calendar .week div {
+  border: 0.5px solid #43aa8b;
+  width: 100%;
 }
 
 .calendar .day {
   position: relative;
   width: calc(100% / 7);
-  height: 55px;
+  height: 75px;
   display: inline-block;
   background-color: white;
   padding: 0;
@@ -156,13 +158,13 @@ h1 {
 }
 
 .calendar .day div {
-  width: 65px;
-  height: 55px;
+  width: 100%;
+  height: 75px;
   position: relative;
   color: black;
   z-index: 100;
-  line-height: 55px;
-  border: 1px solid #43aa8b;
+  line-height: 75px;
+  border: 0.5px solid #43aa8b;
   cursor: pointer;
 }
 
@@ -180,4 +182,3 @@ h1 {
 .calendar .day div.today {
   background-color: grey;
 }
-
